2005-11-03  Matthias Wimmer  <m@tthias.net>

    * jabberd/jabberd.h: new select() loop, and client certificate validation
    * jabberd/mio_ssl.c: same
    * jabberd/mio_xml.c: new select() loop
    * jabberd/mio.c: same
    * jabberd/lib/base64.c: declaring things as const
    * jabberd/lib/jabberdlib.h: same
    * dialback/dialback.h: SASL EXTERNAL on s2s
    * dialback/dialback_in.c: same
    * dialback/dialback_out.c: same
    * dialback/dialback.c: same

2005-11-02  Matthias Wimmer  <m@tthias.net>

    * jabber.xml.dist.in: certificate validation part 1
    * jabberd/jabberd.h: same
    * jabberd/mio_ssl.c: same
    * dialback/dialback.c: same
    * jabberd/log.c: makeing arguments const for some logging funcs
    * jabberd/lib/jabberdlib.h: make 2nd arg to jid_new const
    * jabberd/lib/jid.c: same

2005-10-21  Matthias Wimmer  <m@tthias.net>

    * dialback/dialback.h: added setting to require STARTTLS for connections
    * dialback/dialback.c: same
    * dialback/dialback_in.c: same
    * dialback/dialback_out.c: same
    * jabberd/base/base_dir.c: changed output file naming for base_dir handler
    * jabberd/lib/jabberdlib.h: the SHA1 hashing result ends with a zero byte
    * jabberd/jabberd.h: new function to query TLS protection state of a conn
    * jabberd/mio_ssl.c: same + better openssl library initialization

2005-08-18  Matthias Wimmer  <m@tthias.net>

    * jsm/sessions.c: Fixed remaining issue of negative priorities
    * jsm/modules/mod_announce.c: same
    * jsm/modules/mod_offline.c: same + deleting delivered offline messages

2005-08-15  Matthias Wimmer  <m@tthias.net>

    * jsm/deliver.c: fix for the new session control protocol
    * jabberd/base/base_dir.c: make base_dir a bidirectional handler

2005-08-09  Matthias Wimmer  <m@tthias.net>

    * jabberd/static.c: new base handler base_dir for reading stanza files
    * jabberd/base/Makefile.am: same
    * jabberd/base/base_dir.c: same

2005-07-11  Matthias Wimmer  <m@tthias.net>
